--- a/src/app/features/shop/item-shop/item-shop.component.html
+++ b/src/app/features/shop/item-shop/item-shop.component.html
@@ -6,7 +6,8 @@
         <div style="text-align: center;">
           <img src="../../../../assets/images/data-test/{{item.image[0].value}}"
                style="margin: 10px 0 0; width: 160px;"
-               class="img-fluid" alt="{{item.name}}" />
+               class="img-fluid" alt="{{item.name}}"
+               loading="lazy" />
         </div>
       </div>
       <div class="card-body pb-0">
