--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,6 +1,6 @@
-<div class="container-fluid bg-dark">
+<div class="container-fluid bg-dark header">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-2 fixed-top">
-        <div class="container">
+        <div class="container navbar-container">
             <div style="margin-right:  30px !important;">
                 <img width="100%" src="../../../../assets/images/logo/logo.png" alt="Logo" style="cursor: pointer;" [routerLink]="['/']"/>
             </div>
