--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -36,7 +36,7 @@
                               </div>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="javascript:void(0)" style="color: #fff;">
+                            <a class="nav-link" [routerLink]="['/cart']" style="color: #fff;">
                                 <div class="" style="position: relative; display: inline-flex;">
                                     <i class="fa-solid fa-cart-shopping"></i>
                                     <div class="cart-number-notify">
