--- a/src/app/features/admin/manage-product/manage-product.component.html
+++ b/src/app/features/admin/manage-product/manage-product.component.html
@@ -196,8 +196,8 @@
       </div>
     </div>
   </div>
-
   <div class="d-flex justify-content-end gap-2 mt-4">
-    <p-button label="Ok" severity="secondary" (onClick)="visibleDialogVariation = false" />
+    <p-button label="Hủy" severity="secondary" (onClick)="visibleDialogVariation = false" />
+    <p-button label="Lưu" (onClick)="visibleDialogVariation = false" />
   </div>
 </p-dialog>
