--- a/src/app/features/admin/manage-goods-receipt/manage-goods-receipt.component.html
+++ b/src/app/features/admin/manage-goods-receipt/manage-goods-receipt.component.html
@@ -23,12 +23,12 @@
                         </ng-template>
                         <ng-template pTemplate="header">
                             <tr>
-                                <th style="width:10%">ID</th>
-                                <th style="width:10%">Mã nhà cung cấp</th>
-                                <th style="width:30%">Nhà cung cấp</th>
+                                <th style="width:15%">Mã phiếu nhập</th>
+                                <th style="width:15%">Mã nhà cung cấp</th>
+                                <th style="width:20%">Nhà cung cấp</th>
                                 <th style="width:20%">Ngày nhập</th>
-                                <th style="width:20%">Tổng tiền</th>
-                                <th style="width:10%"></th>
+                                <th style="width:15%">Tổng tiền</th>
+                                <th style="width:15%"></th>
                             </tr>
                         </ng-template>
                         <ng-template pTemplate="body" let-goodsReceipt let-editing="editing" let-ri="rowIndex">
